--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Kayla's online Portfolio
-email: kayliu011@gmail.com
+email: f/xpznlrnl
 url: https://github.com/jeromelachaud/freelancer-theme
 description: "Kayla's Art Portfolio"
 keywords: "your keywords, separated by commas"
