--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
-title: Kayla's online Portfolio
+title: Kayla's Art Portfolio
 email: f/xpznlrnl
-url: https://github.com/jeromelachaud/freelancer-theme
+url: https://toebeansart.github.io
 description: "Kayla's Art Portfolio"
 keywords: "your keywords, separated by commas"
 skills: "Web Developer - Graphic Artist - User Experience Designer"
