--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: f/xpznlrnl
 url: https://toebeansart.github.io
 description: "Kayla's Art Portfolio"
 keywords: "your keywords, separated by commas"
-skills: "Web Developer - Graphic Artist - User Experience Designer"
+skills: "Artist - Dreamer - Dogs lover"
 meta_author: Liu Kayla
 
 # Google webmaster tools
